; ModuleID = '/home/carl/AnghaBench/radare2/libr/main/extr_rasm2.c___as_set_archbits.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/main/extr_rasm2.c___as_set_archbits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@R_SYS_ARCH = common dso_local global i32 0, align 4
@R_SYS_BITS = common dso_local global i32 0, align 4
@R_SYS_BITS_64 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @__as_set_archbits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__as_set_archbits(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @R_SYS_ARCH, align 4
  %8 = call i32 @r_asm_use(i32 %6, i32 %7)
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @R_SYS_ARCH, align 4
  %13 = call i32 @r_anal_use(i32 %11, i32 %12)
  %14 = load i32, i32* @R_SYS_BITS, align 4
  %15 = load i32, i32* @R_SYS_BITS_64, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  %18 = zext i1 %17 to i64
  %19 = select i1 %17, i32 64, i32 32
  store i32 %19, i32* %3, align 4
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* %3, align 4
  %24 = call i32 @r_asm_set_bits(i32 %22, i32 %23)
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* %3, align 4
  %29 = call i32 @r_anal_set_bits(i32 %27, i32 %28)
  ret void
}

declare dso_local i32 @r_asm_use(i32, i32) #1

declare dso_local i32 @r_anal_use(i32, i32) #1

declare dso_local i32 @r_asm_set_bits(i32, i32) #1

declare dso_local i32 @r_anal_set_bits(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
